# bfvm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bfvm.opam  dune-project  test.bf
docs/: dune  index.mld
lib/: bfvm.ml  bfvm.mli  codegen.ml  codegen.mli  compiler.ml  compiler.mli  dune  parse.ml  parse.mli  parser.ml  parser.mli  passes.ml  passes.mli  toplevel.ml
test/: dune  test_bfvm.ml
test/inputs/: inc_dec.bf  ops.bf
tests/: dune  test_bfvm.ml
tests/inputs/: add.bf  nested_loop.bf  ops.bf  print_one.bf
